force-app/main/default/objects/SalesActivity__c/SalesActivity__c.object-meta.xml
<CustomObject>
    <label>営業活動</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>営業活動番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>営業活動</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>