force-app/main/default/objects/SalesActivity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>営業活動</relationshipLabel>
    <relationshipName>SalesActivities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>