force-app/main/default/objects/SalesActivity__c/fields/ActivityDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>活動日時</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>