force-app/main/default/objects/SalesActivity__c/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <label>活動種別</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>訪問</fullName>
            </value>
            <value>
                <fullName>架電</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>打合せ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>AI相談</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>