force-app/main/default/objects/SalesActivity__c/fields/AIConversationSummary__c.field-meta.xml
<CustomField>
    <fullName>AIConversationSummary__c</fullName>
    <label>AI会話要約</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>