force-app/main/default/objects/SalesActivity__c/fields/AttachmentCount__c.field-meta.xml
<CustomField>
    <fullName>AttachmentCount__c</fullName>
    <label>添付数</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>