force-app/main/default/objects/SalesActivity__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>概要</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>