force-app/main/default/objects/SalesActivity__c/validationRules/Summary_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Summary_Required</fullName>
    <active>true</active>
    <description>概要は必須（空白のみも不可）</description>
    <errorConditionFormula>LEN(TRIM(Summary__c)) = 0</errorConditionFormula>
    <errorDisplayField>Summary__c</errorDisplayField>
    <errorMessage>概要は必須です</errorMessage>
</ValidationRule>